# almond-gnome

./: .eslintrc.yml  .gitignore  .gitmodules  .npmrc  .travis.yml  .yarnrc  CONTRIBUTING.md  LICENSE  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  edu.stanford.Almond.json  export-shell-extension.sh  install-shell-extension.sh  meson.build  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
build-data/: grpc_rename_gettid.patch  mycroft-precise-deps.patch  mycroft-precise-model.patch  npm.json  python3-Cython.json  python3-attrs.json  python3-h5py.json  python3-keras.json  python3-numpy.json  python3-pbr.json  python3-pkgconfig.json  python3-portalocker.json  python3-portalocker.patch  python3-prettyparse.json  python3-pyache.json  python3-pyaudio.json  python3-pybind11.json  python3-python-dateutil.json  python3-scipy.json  python3-setuptools_scm.json  python3-sonopy.json  python3-speechpy-fast.json  python3-tensorflow-deps.json  python3-tensorflow.json  python3-typing.json  python3-wavio.json  python3-wheel.json  python3-wrapt.json  tensorflow-bazel-deps.json  tensorflow.bazelrc  yarn.json
common/: chatmodel.js  config.js  serviceproxy.js
data/: Makefile.am  application.css  device-config.ui  edu.stanford.Almond.BackgroundService.service.in  edu.stanford.Almond.appdata.xml.in  edu.stanford.Almond.data.gresource.xml  edu.stanford.Almond.desktop.in  edu.stanford.Almond.gschema.xml  edu.stanford.Almond.service.in  edu.stanford.thingengine.BackgroundService.service.in  edu.stanford.thingengine.appdata.xml.in  edu.stanford.thingengine.data.gresource.xml  edu.stanford.thingengine.desktop.in  edu.stanford.thingengine.gschema.xml  edu.stanford.thingengine.service.in  main.ui  menus.ui  meson.build  settings.ui
helpers/: meson.build  spawn-app
meson/: copy_service_to_builddir.py  meson_post_install.py
po/: .gitignore  Makevars  POTFILES.in
service/: .eslintrc.yml  .gitignore  .yarnrc  Makefile.in  assistant.js  config.js  flatpak.json  main.js  meson.build  package.json  platform.js  speech_handler.js  speech_recognizer.js  speech_synthesizer.js
service/data/: thingengine.gnome.tt
service/data/wake-word/: almond.net  almond.net.params
service/platform/: bluez.js  graphics.js  index.js  speech_synthesizer.js  thingengine.gnome.js
service/tools/: update-flatpak-definition.js
service/wake-word/: mycroft_precise.js  porcupine.js  snowboy.js
service/wake-word/porcupine/: LICENSE  index.js  pv_porcupine.js
shell-extension/: .eslintrc.yml  convenience.js  extension.js  meson.build  metadata.json  stylesheet.css
src/: Makefile.am  chatmodel.js  chatview.js  config.js  deviceconfig.js  devicemodel.js  edu.stanford.Almond.in  edu.stanford.Almond.src.gresource.xml  edu.stanford.thingengine.src.gresource.xml  main.js  meson.build  prefs.js  serviceproxy.js  util.js  window.js
src/app/: appmodel.js  chatview.js  deviceconfig.js  devicemodel.js  imagecacher.js  main.js  prefs.js  servicelaunch.js  settings.js  window.js
src/common/: chatmodel.js  config.js  serviceproxy.js  util.js
src/service/: .gitignore  assistant.js  config.js  main.js  package.json  platform.js
tools/: .eslintrc.yml  update-flatpak-definition.js
travis/: download-deps.py  id_rsa.autodeploy.enc  unlock-key.sh
